--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "babel-plugin-transform-es2015-typeof-symbol": "^6.23.0",
     "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^5.0.1",
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
+    "prettier": "^1.13.7",
     "supertest": "^3.1.0"
   },
   "dependencies": {
