--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
+    "awilix": "^3.0.8",
+    "awilix-express": "^1.1.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
