--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Assessment skill backend developer",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production NODE_PATH=. SECRETSTRING=nodeauthsecret PORT=3000 nodemon --exec babel-node index.js",
-    "dev": "cross-env NODE_ENV=development NODE_PATH=. SECRETSTRING=nodeauthsecret PORT=3000 nodemon --exec babel-node index.js",
+    "start":
+      "cross-env NODE_ENV=production NODE_PATH=. SECRETSTRING=nodeauthsecret PORT=3000 nodemon --exec babel-node src/index.js",
+    "dev":
+      "cross-env NODE_ENV=development NODE_PATH=. SECRETSTRING=nodeauthsecret PORT=3000 nodemon --exec babel-node src/index.js",
     "babel-node": "babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,13 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/zergote/backend-developer-assessment.git"
   },
-  "keywords": [
-    "api",
-    "rest",
-    "ddd",
-    "onion",
-    "architecture"
-  ],
+  "keywords": ["api", "rest", "ddd", "onion", "architecture"],
   "author": "Christian Yánez",
   "license": "MIT",
   "bugs": {
@@ -64,5 +60,31 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10"
+  },
+  "babel": {
+    "presets": ["stage-0"],
+    "plugins": [
+      "check-es2015-constants",
+      "transform-es2015-arrow-functions",
+      "transform-es2015-block-scoped-functions",
+      "transform-es2015-block-scoping",
+      "transform-es2015-computed-properties",
+      "transform-es2015-destructuring",
+      "transform-es2015-duplicate-keys",
+      "transform-class-properties",
+      "transform-es2015-for-of",
+      "transform-es2015-function-name",
+      "transform-es2015-literals",
+      "transform-es2015-modules-commonjs",
+      "transform-es2015-object-super",
+      "transform-es2015-parameters",
+      "transform-es2015-shorthand-properties",
+      "transform-es2015-spread",
+      "transform-es2015-sticky-regex",
+      "transform-es2015-template-literals",
+      "transform-es2015-typeof-symbol",
+      "transform-es2015-unicode-regex",
+      "transform-async-to-generator"
+    ]
   }
 }
