--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "structure": "^1.3.0"
   },
   "babel": {
     "presets": [
