--- a/package.json
+++ b/package.json
@@ -65,11 +65,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "express-async-await": "^1.1.0",
-    "express-async-errors": "^3.0.0",
     "lodash": "^4.17.10",
-    "method-override": "^2.3.10",
-    "structure": "^1.3.0"
+    "method-override": "^2.3.10"
   },
   "babel": {
     "presets": [
