--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-status-monitor": "^1.1.4",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "method-override": "^2.3.10"
